--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,85 @@
 {
 	background: white;
 }
+
+#yDataDropdownContainer
+{
+	/*margin-top: 60px;*/
+}
+
+#filterboxes li.checkbox
+{
+	/*margin-left: 10px;*/
+}
+
+#xDataDropdownContainer{
+}
+
+.axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
+
+  .dot {
+    stroke: #000;
+  }
+
+  .tooltip {
+    position: absolute;
+    width: 200px;
+    height: 28px;
+    pointer-events: none;
+  }
+
+  svg {
+      font: 12px sans-serif;
+      text-anchor: middle;
+    }
+    
+    rect {
+      stroke: lightgray;
+      stoke-width: 1px;
+      fill: none;
+    }
+    
+    #corrmat .y.axis path{
+      fill: none;
+      stroke: none;
+    }
+
+    #corrmat{}
+
+    .flex-container,
+    .scatterplot-flex,
+    .column-flex{
+    	display: flex;
+    }
+
+    .flex-container{
+    	width: 100%;
+    	justify-content: center;
+    }
+
+    .column-flex{
+  		flex-direction: column;
+  	}
+
+  	.scatterplot-flex{
+  		flex-direction: row;
+  	}
+
+  	#xDataDropdownContainer{
+  		align-self: flex-end;
+  	}
+
+  	#dropdownMenuYData,
+  	#dropdownMenuXData{
+  		width: 200px;
+  	}
+
+  	.dropdown-menu{
+  		top: initial;
+  	}
+
