--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,6 @@
-.tooltip
-{
-	background: white;
-}
-
 #yDataDropdownContainer
 {
 	/*margin-top: 60px;*/
-}
-
-#filterboxes li.checkbox
-{
-	/*margin-left: 10px;*/
 }
 
 #xDataDropdownContainer{
@@ -27,12 +17,12 @@
     stroke: #000;
   }
 
-  .tooltip {
+  /*.tooltip {
     position: absolute;
     width: 200px;
     height: 28px;
     pointer-events: none;
-  }
+  }*/
 
   svg {
       font: 12px sans-serif;
@@ -72,15 +62,29 @@
   	}
 
   	#xDataDropdownContainer{
-  		align-self: flex-end;
+  		/*align-self: flex-end;*/
   	}
 
   	#dropdownMenuYData,
   	#dropdownMenuXData{
-  		width: 200px;
+  		/*width: 200px;*/
   	}
 
   	.dropdown-menu{
   		top: initial;
   	}
+
+    #filterboxes div.checkbox{
+        margin: 0;
+    }
+    #filterboxes .list-group-item{
+      padding-top: 2px;
+      padding-bottom: 2px;
+    }
+
+    .axis-panel{
+      padding: 1em;
+    }
+
+
 
